# Astral

./: .gitignore  CMakeLists.txt  README.md  To Do  acceptable.json
.cache/clangd/index/: ViGEmClient.h.F1D978E55CC82851.idx  ViGEmCommon.h.4C2F35350CCB4BBA.idx  lua_functions.cpp.6EE21E7D1F2B489B.idx  lua_libraries.cpp.0A23FD857203CFF8.idx  main.cpp.31912050F7095AC8.idx  virtual.cpp.8323935E55922D09.idx
docs/: index.html  scripts.js  style.css  styles.css
include/: lua_functions.h  lua_functions.hpp  lua_state.hpp
include/vigem/: ViGEmCommon.h  ViGEmUtil.h
libs/: ViGEmClient.lib
libs/ViGEm/: ViGEmBusShared.h  ViGEmClient.h
src/: lua_state.cpp  main.cpp
